--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple collaborative whiteboard",
   "main": "index.js",
   "dependencies": {
+    "aws-sdk": "^2.1502.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^4.16.1",
     "socket.io": "^4.6.1",
