--- a/aws-backend/package.json
+++ b/aws-backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-elasticache": "^3.465.0",
     "@aws-sdk/client-sqs": "^3.465.0",
     "aws-sdk": "^2.1512.0",
     "dotenv": "^16.3.1",
