refactor: code structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,32 @@
+version: "3"
 services:
-  myapp:
-    image: my-nodejs-app
+  Frontend:
+    image: whiteboard-frontend
     environment:
       AWS_REGION: ${AWS_REGION}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
     ports:
       - "3000:3000"
+    networks:
+      - app-tier
+  Backend:
+    image: whiteboard-aws-backend
+    environment:
+      AWS_REGION: ${AWS_REGION}
+      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
+      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+    ports:
+      - "3002:3002"
+    networks:
+      - app-tier
+  Etcd:
+    image: "bitnami/etcd:latest"
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
+    ports:
+      - 2379:2379
+      - 2380:2380
+    networks:
+      - app-tier
