--- a/aws-backend/package.json
+++ b/aws-backend/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-sqs": "^3.465.0",
     "aws-sdk": "^2.1512.0",
     "dotenv": "^16.3.1",
+    "etcd3": "^1.1.2",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
     "nodemon": "^3.0.2"
