--- a/aws-backend/package.json
+++ b/aws-backend/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-elasticache": "^3.465.0",
     "@aws-sdk/client-sqs": "^3.465.0",
     "aws-sdk": "^2.1512.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "etcd3": "^1.1.2",
     "express": "^4.18.2",
