--- a/aws-backend/package.json
+++ b/aws-backend/package.json
@@ -18,6 +18,7 @@
     "etcd3": "^1.1.2",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.0.2"
   }
 }
